<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FoodDetailsActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-51dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ImageView
        android:id="@+id/food_image"
        android:layout_width="432dp"
        android:layout_height="228dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:adjustViewBounds="true"
        android:padding="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

    <TextView
        android:id="@+id/food_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginTop="48dp"
        android:text="@string/food_title"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintTop_toBottomOf="@+id/food_image"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/food_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="32dp"
        android:text="@string/food_desc"
        android:textColor="#6E6E6E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_price" />

    <TextView
        android:id="@+id/food_price"
        android:layout_width="100dp"
        android:layout_height="27dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="15dp"
        android:layout_marginTop="16dp"
        android:text="@string/food_price"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_title" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="322dp"
        android:layout_height="55dp"
        android:layout_marginBottom="40dp"
        android:shadowColor="#000000"
        android:shadowDx=".5"
        android:shadowDy=".5"
        android:shadowRadius=".5"
        android:text="@string/add_to_cart"
        android:textAlignment="center"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/num_items_text"
        android:layout_width="47dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:ems="10"
        android:inputType="number"
        android:singleLine="true"
        android:text="1"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/add_button"
        app:layout_constraintEnd_toStartOf="@+id/plus_button"
        app:layout_constraintStart_toEndOf="@+id/minus_button"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/minus_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="128dp"
        android:contentDescription="TODO"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/plus_button"
        app:srcCompat="@drawable/ic_baseline_indeterminate_check_box_24"
        app:tint="#000000" />

    <ImageView
        android:id="@+id/plus_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/num_items_text"
        app:srcCompat="@drawable/ic_baseline_add_box_24"
        app:tint="#000000" />


</androidx.constraintlayout.widget.ConstraintLayout>